force-app/main/default/objects/Entitlement_Warranty_Details__c/Entitlement_Warranty_Details__c.object-meta.xml
<CustomObject>
    <description>SOX object - Entitlement Warranty Details</description>
    <label>Entitlement Warranty Details</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entitlement Warranty Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>