force-app/main/default/objects/Entitlement_Warranty_Details__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CS21-1258 : Create an account look-up field in SFDC for Entitlement Warranty Details (for CEM/Planhat)</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Entitlement Warranty Details</relationshipLabel>
    <relationshipName>Entitlement_Warranty_Details</relationshipName>
    <type>Lookup</type>
</CustomField>