force-app/main/default/objects/Entitlement_Warranty_Details__c/fields/CEM_Health_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>CEM_Health_Check_Date__c</fullName>
    <description>CEM Health Check Date</description>
    <label>CEM Health Check Date</label>
    <type>Date</type>
</CustomField>