force-app/main/default/objects/Entitlement_Warranty_Details__c/fields/CEM_Notes__c.field-meta.xml
<CustomField>
    <fullName>CEM_Notes__c</fullName>
    <description>CEM Notes</description>
    <label>CEM Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>