force-app/main/default/objects/Entitlement_Warranty_Details__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cluster</description>
    <label>Cluster</label>
    <referenceTo>Cluster__c</referenceTo>
    <relationshipLabel>Entitlement Warranty Details</relationshipLabel>
    <relationshipName>Entitlement_Warranty_Details</relationshipName>
    <type>Lookup</type>
</CustomField>