force-app/main/default/objects/Entitlement_Warranty_Details__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End Date</description>
    <label>Warranty Eligibility End Date</label>
    <type>Date</type>
</CustomField>