force-app/main/default/objects/Entitlement_Warranty_Details__c/fields/Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Entitlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Entitlement</description>
    <label>Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipName>Entitlement_Warrenty_Details</relationshipName>
    <type>Lookup</type>
</CustomField>