force-app/main/default/objects/Entitlement_Warranty_Details__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>End Date</description>
    <label>Warranty Eligibility Start Date</label>
    <type>Date</type>
</CustomField>