force-app/main/default/objects/Entitlement_Warranty_Details__c/fields/Warranty_Compliant__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Compliant__c</fullName>
    <description>Warranty Compliant</description>
    <label>Warranty Compliant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>