force-app/main/default/objects/Entitlement_Warranty_Details__c/validationRules/RecordIsReadOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>RecordIsReadOnly</fullName>
    <active>true</active>
    <description>RecordIsReadOnly</description>
    <errorConditionFormula>!ISNEW()</errorConditionFormula>
    <errorMessage>Record is not editable. Please create a new entry</errorMessage>
</ValidationRule>