force-app/main/default/objects/Entitlement_Warranty_Details__c/validationRules/WarrentyComplainYesIfStatusActive.validationRule-meta.xml
<ValidationRule>
    <fullName>WarrentyComplainYesIfStatusActive</fullName>
    <active>true</active>
    <description>WarrentyComplainYesIfStatusActive</description>
    <errorConditionFormula>AND( TEXT(Warranty_Compliant__c) == &apos;No&apos;,  Text(Warranty_Status__c ) == &apos;Active&apos;)</errorConditionFormula>
    <errorDisplayField>Warranty_Compliant__c</errorDisplayField>
    <errorMessage>Complain should be true if Status is Active</errorMessage>
</ValidationRule>